# stategraph-react-simulation-agentic-comparison

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml  run.py  run_batch.py
data/output/: aggregate_metrics.json  batch_summary.json
data/output/dialogues/: react_0_0_20260309_180219.json  react_0_0_20260311_201309.json  react_0_0_20260311_210740.json  react_13_13_20260309_180532.json  react_13_13_20260311_193518.json  react_13_13_20260311_211242.json  react_14_14_20260309_171715.json  react_14_14_20260311_193816.json  react_14_14_20260311_215112.json  react_16_16_20260309_171750.json  react_16_16_20260311_182628.json  react_16_16_20260311_193843.json  react_16_16_20260311_211531.json  react_17_17_20260309_171804.json  react_17_17_20260311_193858.json  react_17_17_20260311_211543.json  react_18_18_20260309_171816.json  react_18_18_20260311_193913.json  react_18_18_20260311_211557.json  (+253 more)
docs/: REPORT.md
docs/figures/: 04_results_generated.md
docs/parts/: 00_header.md  01_introduction.md  02_experimental_design.md  03_metrics.md  04_results.md  05_discussion.md  06_threats_to_validity.md  07_conclusion.md  08_footer.md
scripts/: build_report.py  check_consistency.py  debug_instability.py  debug_mcnemar.py  generate_figures.py  generate_results_tables.py
src/: aws_client.py  bedrock_tools.py
src/domain/: coverage.py  strategy_models.py
src/metrics_agregator/: builder.py  comparison.py  io.py  models.py  readme.md  run_metrics.py  scenario_aggregation.py  statistics.py
src/profile/: build_profiles.py  builder.py  schemas.py
src/research/: dialogue_recorder.py  metrics_helpers.py  metrics_sink.py  scenario.py
src/simulator/: patient_simulator.py  prompt.py  retriever.py  test_simulator.py
src/strategies/: __init__.py  base.py  react_strategy.py  stategraph_strategy.py
src/utils/: __init__.py  retry.py
(+9 files in other folders)
