[project]
name = "langgraph-vs-react-with-length-control"
version = "0.0.1"
description = "LangGraph vs. ReAct: StateGraph vs. Linear Cyclic Chain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.5.0",
    "boto3>=1.40.61",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "matplotlib>=3.10.8",
    "numpy>=2.1.3",
    "pandas>=2.3.3",
    "pyarrow>=23.0.0",
    "pydantic-settings==2.12.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "typer>=0.24.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ruff>=0.15.1",
    "poethepoet>=0.41.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
]

[tool.uv]
package = true

[tool.black]
line-length = 88

[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints",
    ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype",
    ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__",
    "_build", "buck-out", "build", "dist", "node_modules", "site-packages", "_ref/*",
    "venv", "*.ipynb", "docs/*", "drafts/*", "archives/*", "tests/*", "notebooks/*"
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "ANN", "W", "N", "I001"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"app/grpc/services.py" = ["N802"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.poe.tasks]
format-fix = "uv run black ."
lint-fix = "uv run ruff check . --fix"
fix-all = { sequence = ["format-fix", "lint-fix"] }
format-check = "uv run black . --check"
lint-check = "uv run ruff check ."
type-check = "uv run pyright ."
